html 빠진 부분 수정

--- a/src/main/resources/templates/html/furever_board.html
+++ b/src/main/resources/templates/html/furever_board.html
@@ -66,12 +66,12 @@
                 <div class="col-12 mt-4">
                     <!-- Tab -->
                     <!-- <nav> -->
-                    <div class="nav nav-tabs mb-3" id="nav-tab" role="tablist">
+                    <div class="nav nav-tabs mb-2" id="nav-tab" role="tablist">
                         <h5>Title</h5>
                         <div class="col text-right">
                             <ul class="list-group mb-0">  
-                                <li class="list-group-item small p-0">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
+                                <li class="list-group-item font-small p-0">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar pr-1" viewBox="0 0 16 16">
                                     <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
                                     </svg>
                                 <span>2023-09-15</span></li>
@@ -124,6 +124,8 @@
                     </div>
                     <!-- </nav> -->
                     <div class="tab-content" id="nav-tabContent">
+                        <div class="text-sm-right mb-2">
+                            작성자: Writer</div>
                         <!-- 소개란 -->
                         <div class="tab-pane fade show active border-light" id="nav-introduce" role="tabpanel"
                             aria-labelledby="nav-introduce-tab">
