--- a/src/main/resources/templates/html/furever_board_list.html
+++ b/src/main/resources/templates/html/furever_board_list.html
@@ -119,16 +119,17 @@
                             <div class="col-12 col-lg-6 col-xl-8">
                                 <div class="card-body py-lg-0">
                                 <div class="d-flex no-gutters align-items-center mb-3">
-                                    <div class="col text-left">
+                                    <div class="pr-2 text-left">
                                         <ul class="list-group mb-0">
-                                            <li class="list-group-item small p-0">
-                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
+                                            <li class="list-group-item font-small p-0">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar pr-1" viewBox="0 0 16 16">
                                                 <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
                                                 </svg>
                                             <span>2023-09-15</span></li>
                                         </ul>
                                     </div>
-                                        <div class="btn-group">
+                                    <span class="col text-muted font-small mr-3 text-left"><span class="fas fa-eye mr-2"></span>680</span>
+                                    <div class="btn-group">
                                             <button class="btn btn-link text-dark dropdown-toggle dropdown-toggle-split m-0 p-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                 <span class="icon icon-sm">
                                                     <span class="fas fa-ellipsis-h icon-secondary"></span>
@@ -178,7 +179,7 @@
                                     <h2 class="h5">게시글 제목</h2>
                                 </a>
                                 <div class="col d-flex pl-0">
-                                    <span class="text-muted font-small mr-3"><span class="fas fa-eye mr-2"></span>680</span>
+                                    <span class="text-muted font-small mr-3">Writer</span>
                                 </div>
                                 </div>
                             </div>
