html, js 불필요한 코드 정리

--- a/src/main/resources/templates/html/furever_sign-up.html
+++ b/src/main/resources/templates/html/furever_sign-up.html
@@ -254,7 +254,7 @@
     </main>
 
     <!-- Custom js -->
-    <script th:src="@{/js/validate.js}"></script>
+    <script th:src="@{/js/signup.js}"></script>
 
     <!-- Core -->
     <script th:src="@{/vendor/jquery/dist/jquery.min.js}"></script>
